Action Icon Search moved to Inicio and menu option Todos added

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -3,7 +3,7 @@
     <string name="saludo">¡Benvingut!</string>
     <string name="email">snackatap@gmail.com</string>
 
-    <string name="buscar">Buscar</string>
+    <string name="todos">Tots</string>
     <string name="categorias">Categories</string>
     <string name="filtrar">Filtrar</string>
     <string name="mas">Més...</string>
