--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -3,7 +3,7 @@
     <string name="saludo">¡Ongietorri!</string>
     <string name="email">snackatap@gmail.com</string>
 
-    <string name="buscar">Bilaketa</string>
+    <string name="todos">Guztiak</string>
     <string name="categorias">Kategoria</string>
     <string name="filtrar">Iragaztea</string>
     <string name="mas">Gehiago...</string>
