--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="todos">Todos</string>
     <string name="categorias">Categorías</string>
+    <string name="favoritos">Favoritos</string>
     <string name="filtrar">Filtrar</string>
     <string name="mas">Más...</string>
     <string name="contact">Contáctanos</string>
@@ -21,6 +22,9 @@
 
     <string name="precio_min">Precio mínimo</string>
     <string name="precio_max">Precio máximo</string>
+
+    <string name="aplicar">Aplicar</string>
+    <string name="cancelar">Cancelar</string>
 
     <string name="action_search">Action of search</string>
     <string name="toolbar">Toolbar_search</string>
@@ -88,5 +92,26 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_scrolling"></string>
+
+
+
+
+
+
+    <string-array name="categorias_array">
+
+        <item>Todas</item>
+
+        <item>Agua</item>
+
+        <item>Café</item>
+
+        <item>Comida sana</item>
+
+        <item>Refresco</item>
+
+        <item>Snack</item>
+
+    </string-array>
 
 </resources>
